Closed Bug 1910868 Opened 1 year ago Closed 1 year ago

[GPU-canvas] Testcase from bug 1828940 doesnt animate with gpu-canvas

Categories

(Core :: Graphics: Canvas2D, defect, P2)

defect

Tracking

()

VERIFIED FIXED
131 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- wontfix
firefox128 --- wontfix
firefox129 --- wontfix
firefox130 --- wontfix
firefox131 --- verified
firefox132 --- verified

People

(Reporter: mayankleoboy1, Assigned: lsalzman)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Use latest nightly on windows. This shpuld have gpu-canvas enabled
Open the testcase from bug 1828940 (https://bugzilla.mozilla.org/attachment.cgi?id=9329296)

AR: The green thing stops after a second
ER: The whole red box should have been covered by the green thing

Additional steps: Each time you reload the testcase, the green thing moves a little further as if it remembers its previous position.

Bisection:
Bug 1829026 - Handle KERN_ABORTED from semaphore_wait. r=aosmond
Differential Revision: https://phabricator.services.mozilla.com/D195952

Attached file about:support
Attached file tc-1828321.html

Set release status flags based on info from the regressing bug 1829026

:lsalzman, since you are the author of the regressor, bug 1829026, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Mayank, does disabling Accelerated Canvas2D (gfx.canvas.accelerated) in about:config fix the issue?

Severity: -- → S3
Flags: needinfo?(mayankleoboy1)
Priority: -- → P2
Regressed by: 1910138

Yes.

Flags: needinfo?(mayankleoboy1)

When we fallback from accelerated canvases to non-accelerated canvases, there may
be a stale PathRecording left around that DrawTargetSkia can't use. In this case,
we need to create a PathSkia with the PathRecording's contents.

Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
See Also: → 1910816
Duplicate of this bug: 1910816
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a9a427160a76 Copy Path state if DrawTarget backend type does not match. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 131 Branch

This is fixed for me on the latest Nightly

:lzlazman is this needed in Fx130, do you want to add a beta uplift request?

I would rather let this ride the trains.

Flags: needinfo?(lsalzman)
Flags: qe-verify+

Reproducible on a 2024-07-31 Nightly build on Windows 10 using the testcase from Comment 2.
Verified as fixed on Firefox 131.0b5 and Firefox Nightly 132.0a1 on Windows 10, Ubuntu 22, macOS 14.
However, it’s worth mentioning that on Windows 10 on both Fx 131.0b5 and Nightly 132.0a1 the animation takes longer to fully render compared to macOS/Ubuntu.
Is this expected or should I file a follow-up bug for Windows-only??
Thank you.

Flags: needinfo?(lsalzman)

Windows and Linux/macOS use different acceleration systems, so it's expected.

Flags: needinfo?(lsalzman)

Thank you for the confirmation!
Removing the qa-verify+ flag and updating the bug.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: