Bug 1910868 - Copy Path state if DrawTarget backend type does not match. r=aosmond

When we fallback from accelerated canvases to non-accelerated canvases, there may
be a stale PathRecording left around that DrawTargetSkia can't use. In this case,
we need to create a PathSkia with the PathRecording's contents.

Differential Revision: https://phabricator.services.mozilla.com/D218512